--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -19,3 +19,58 @@
     font-size: 140%;
     font-weight: bold;
 }
+
+.ball{
+    font-family: Montserrat;
+    
+    font-weight: bold;
+    color: salmon;
+    padding: 14px;
+    font-size: 90%;
+    
+}
+
+
+
+
+.carousel-inner{
+    height:300px
+}
+
+.carousel-item .car_img{
+    height:300px;
+    width:100%;
+}
+
+.jumbotron{
+    padding-top: 0%;
+    padding-bottom: 0%;
+}
+
+.textarea1{
+    padding-top: 0%;
+    padding-right: 2%;
+    padding-left: 2%;
+    padding-bottom: 2%;
+}
+
+ .textarea_img{
+    height:auto;
+    width:100%;
+}
+
+.text_border{
+    border-right: lightgray solid 1px;
+}
+
+.qwer{
+    border-radius: 50%;
+    height:200px;
+    width:90%;
+}
+
+.lmno{
+height:auto;
+width:100%;
+margin:auto;
+}
