--- a/css/style1.css
+++ b/css/style1.css
@@ -1,94 +1,128 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
-
-
-
-
-
-
-
-
-
-
-
-/*---Media Queries --*/
-@media (max-width: 992px) {
-
-  }
-@media (max-width: 768px) {
-  
+body {
+    /*background-color: #bcbcbc;*/
 }
-@media (max-width: 576px) {
-  
+.hed{
+    font-family: 'lato', sans-serif;
+    font-weight: 200;
+    padding: 3%;
+    color: #171717;
+    font-size: 55px;
+    
 }
 
+.subhed{
+    font-family: 'Lato', sans-serif;
+    font-weight: lighter;
+    padding: 4%;
+    font-size: -webkit-xxx-large;
+    /*background-color: cornsilk;*/
+    margin-top: 0.5%;
+    margin-right: 0.5%;
+    margin-top: 10px;
 
-/*---Firefox Bug Fix --*/
-.carousel-item {
-  transition: -webkit-transform 0.5s ease;
-  transition: transform 0.5s ease;
-  transition: transform 0.5s ease, -webkit-transform 0.5s ease;
-  -webkit-backface-visibility: visible;
-  backface-visibility: visible;
-}
-/*--- Fixed Background Image --*/
-figure {
-  position: relative;
-  width: 100%;
-  height: 60%;
-  margin: 0!important;
-}
-.fixed-wrap {
-  clip: rect(0, auto, auto, 0);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-#fixed {
-  background-image: url('img/mac.png');
-  position: fixed;
-  display: block;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-position: center center;
-  -webkit-transform: translateZ(0);
-          transform: translateZ(0);
-  will-change: transform;
-}
-/*--- Bootstrap Padding Fix --*/
-[class*="col-"] {
-    padding: 1rem;
 }
 
+.under{
+    border-bottom: 1px solid rgba(34, 33, 33, 0.34);
+    padding-bottom: 3px;
+    width:auto;
+}
 
+.bglit{
+    /*background-color: beige;*/
+}
 
+.textarea_img{
+    height: 100%;
+    width: 100%;}
 
+.text_border{
+    /*border-right: lightgray solid 1px;*/
+}
 
+.text_pad {
+    margin-top: 3%;
+    margin-bottom: 1.5%;
+
+}
+.cardbrdr{
+    padding: 1%;
+    margin: 2%;
+}
 /*
-Extra small (xs) devices (portrait phones, less than 576px)
-No media query since this is the default in Bootstrap
+{
+    font-family:sans-serif;
+    font-weight:bold;
+    color:azure;
+}
 
-Small (sm) devices (landscape phones, 576px and up)
-@media (min-width: 576px) { ... }
 
-Medium (md) devices (tablets, 768px and up)
-@media (min-width: 768px) { ... }
 
-Large (lg) devices (desktops, 992px and up)
-@media (min-width: 992px) { ... }
+.team{
+    height: 25%;
+    width: auto;
+}
 
-Extra (xl) large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) { ... }
 */
 
 
+.textarea1 .textarea2{
+    margin: 0.5% 0%;
+    padding: 0.5% 0%;
+}
 
+.box{
+    transition: box-shadow 10s;
+    border-radius:5px;
+    border: 0px solid #ccc;
+    background: #fff;
+    float: left;
+    box-shadow: 0 0 11px rgba(0, 0, 0, 0.5);
+}
+.box:hover {
+    box-shadow: 0 0 13px rgba(0, 0, 0, 0.5); 
+    overflow: hidden;
+}
 
+.box1{
+    margin-top: 15px;
+    border-radius:5px;
+    border: 0px solid #ccc;
+    background: #fff;
+    float: left;
+    box-shadow: 0 0 11px rgba(33,33,33,.2);
+    margin-bottom: 30px;
+}
 
+/* Colorize-zoom Container */
+.img-hover-zoom--colorize img {
+  transition: transform .4s, filter .4s ease-in-out;
+  filter: grayscale(30%);
+}
 
+/* The Transformation */
+.img-hover-zoom--colorize:hover img {
+  filter: grayscale(0);
+  transform: scale(1.1);
+}
+.img-hover-zoom {
+  overflow: hidden; /* Removing this will break the effects */
+}
 
+.card-hover-zoom{
+    transition: transform .4s;
+}
 
+.card-hover-zoom:hover{
+    transform: scale(1.05);
+}
+
+.ball{
+    font-family: 'lato',sans-serif, Monsterrat;
+    
+    font-weight: bold;
+    color: salmon;
+    padding: 14px;
+    font-size: 90%;
+    
+}
